# DBR_DetlaLake_Rust

./: .gitignore  Cargo.toml  README.md  RustNotes.md
databricks-rust-catalog/: Cargo.toml  README.md
databricks-rust-catalog/docs/doc/: crates.js  search-index.js
databricks-rust-catalog/docs/doc/databricks_rust_catalog/data/api_client/: sidebar-items.js  struct.APIClient.html
databricks-rust-catalog/docs/doc/databricks_rust_catalog/data/delta/: sidebar-items.js  struct.DeltaLakeManager.html
databricks-rust-catalog/docs/doc/databricks_rust_catalog/data/metastore/: sidebar-items.js  struct.Client.html  struct.Schema.html  struct.SchemaResponse.html
databricks-rust-catalog/docs/doc/databricks_rust_catalog/data/permissions/: enum.SecurableType.html  fn.can_read.html  fn.can_write.html  fn.check_permissions.html  fn.fetch_permissions.html  fn.get_object_owner.html  index.html  struct.ObjectOwnerResponse.html  struct.PrivilegeAssignmentsResponse.html  struct.User.html
databricks-rust-catalog/docs/doc/src/databricks_rust_catalog/data/: permissions.rs.html
databricks-rust-catalog/docs/doc/trait.impl/alloc/string/: trait.ToString.js
databricks-rust-catalog/docs/doc/trait.impl/core/clone/: trait.Clone.js
databricks-rust-catalog/docs/doc/trait.impl/core/fmt/: trait.Debug.js
databricks-rust-catalog/src/: main.rs
databricks-rust-catalog/src/api/: api_client.rs  delta.rs  metastore.rs  permissions.rs
databricks-rust-catalog/src/data/: api_client.rs  delta.rs  permissions.rs
databricks-rust-catalog/tests/: api_test.rs
databricks-rust-service/: Cargo.toml  README.md
databricks-rust-service/src/: main.rs
dbrx_rest_api/: Cargo.toml
docs/: .rustc_info.json
(+50 files in other folders)
