[package]
name = "dbrx_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.144", features = ["derive"]}
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite"] }
log = { version = "0.4.3" }